# checkers

./: .gitignore  CMakeLists.txt  FuncStats.txt  GuidStats.txt  benchmark.c  checkers.c  checkers.sln  checkers.vcxproj  checkers.vcxproj.filters  menu.c  menu.h  stb_easy_font.h  test.c
checkers/Debug/: vc143.idb
checkers/Debug/checkers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  checkers.lastbuildstate
checkers/x64/Debug/: checkers.exe.recipe  checkers.ilk  vc143.idb
checkers/x64/Debug/checkers.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  checkers.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
lib/: glew32.lib
